# jupyterlab-sql

./: .prettierignore  MANIFEST.in  install.json  jest.config.js  package-lock.json  package.json  pyproject.toml  setup.py  tsconfig.json  tsconfig.tsbuildinfo
jupyter-config/: jupyterlab_sql.json
jupyterlab_sql/: __init__.py  executor.py  handlers.py  responses.py
src/: index.ts  page.ts  widget.ts
src/api/: history.ts  index.ts  schemaStructure.ts
src/connection/: connectionEditor.tsx
src/databaseSummary/: content.tsx  index.ts
src/queryHistory/: content.tsx  editor.ts  index.ts  toolbar.ts
src/schemaSummary/: content.tsx  index.ts  toolbar.ts
style/: base.css  index.css
